python-toolbox2 (0.9.0~dev-1) unstable; urgency=low

  * New upstream release, closes: #6582, #6583.

 -- Matthieu Bouron <matthieu.bouron@smartjog.com>  Thu, 20 Dec 2012 17:31:37 +0100

python-toolbox2 (0.8.1-1) unstable; urgency=low

  * New upstream release, closes: #6552.

 -- Matthieu Bouron <matthieu.bouron@smartjog.com>  Wed, 16 Jan 2013 18:09:26 +0100

python-toolbox2 (0.8.0-1) unstable; urgency=low

  * New upstream release.

 -- Matthieu Bouron <matthieu.bouron@smartjog.com>  Mon, 17 Dec 2012 11:55:57 +0100

python-toolbox2 (0.7.0-1) unstable; urgency=low

  * New upstream release.
  * Raise dependency on ffmpeg-static (>= 1.0).
  * Add a recommends on bmx (>= 0.1.2).

 -- Matthieu Bouron <matthieu.bouron@smartjog.com>  Wed, 19 Sep 2012 12:09:11 +0200

python-toolbox2 (0.6.0-2) unstable; urgency=low

  * Move kt-toolbox from depends to recommends.
  * Move ommedia from depends to recommends.
  * Move flvtool2 from depends to recommends.

 -- Matthieu Bouron <matthieu.bouron@smartjog.com>  Thu, 09 Aug 2012 18:18:51 +0200

python-toolbox2 (0.6.0-1) unstable; urgency=low

  * New upstream release, closes: #5758, #5759, #5763, #5764, #5913, #5898,
    #5900.
  * Add a recommends for sjconf-toolbox2.
  * Add dependency on ommedia (>= 6.4.1).
  * Raise dependency on ffmpeg-static (>= 0.12~).
  * Add dependency on flvtool2 (>= 1.0.6).

 -- Matthieu Bouron <matthieu.bouron@smartjog.com>  Thu, 12 Apr 2012 10:43:56 +0200

python-toolbox2 (0.5.0-1) unstable; urgency=low

  * New upstream release, closes: #5545, #5654.
  * Raise dependency on ffmpeg-static (>= 0.11~).
  * Add missing dependency on kt-toolbox (>= 1.0.4).

 -- Matthieu Bouron <matthieu.bouron@smartjog.com>  Wed, 28 Mar 2012 16:35:08 +0200

python-toolbox2 (0.4.0-1) unstable; urgency=low

  * New upstream release, closes: #5458.
  * Add myself to Uploaders.

 -- Rémi Cardona <remi.cardona@smartjog.com>  Mon, 16 Jan 2012 11:03:40 +0100

python-toolbox2 (0.3.0-1) unstable; urgency=low
