@@ -1,12 +1,5 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/autotools.mk
-
-DEB_MAKE_CHECK_TARGET = check
-
-PYTHON_PACKAGES := python-toolbox2
-
-$(patsubst %,binary-install/%,$(PYTHON_PACKAGES)) ::
-	dh_pycentral -p$(cdbs_curpkg)
+%:
+	dh $@ --with python2
